feat: 完善用户管理功能，支持创建/编辑/重置密码及角色管理
后端：
- 新增用户创建、编辑、重置密码 API，统一权限校验（user:write）
- UserService 新增 createUser/updateUser/resetPassword 方法，含用户名格式、密码强度、用户名唯一性校验
- PermissionService 新增角色查询与安全防护：禁止禁用自己、禁止移除最后一个管理员
- 新增 6 个业务错误码（USER_NOT_FOUND、USERNAME_DUPLICATE 等）
- BusinessException 支持 ErrorCode + 自定义消息构造
- UserVO 扩展 roleIds/roleNames/authSource/createdAt 字段

前端：
- 用户列表页新增搜索过滤、创建/编辑/重置密码入口，支持分页总数与角色标签展示
- 新增 UserFormDialog 创建/编辑用户弹窗，含前端表单校验与角色多选
- 新增 ResetPasswordDialog 重置密码弹窗，含两次密码一致性校验